--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-description: "Welcome to the home of your new documentation"
+description: "Welcome to Pranthora!"
 ---
 
 <img
@@ -15,34 +15,39 @@ description: "Welcome to the home of your new documentation"
   alt="Hero Dark"
 />
 
-## Setting up
+## What is Pranthora ?
 
-The first step to world-class documentation is setting up your editing environments.
+Pranthora lets you create voice agents and workflows with built-in integrations to multiple providers.\
+Simply plug in what you need, and your agent is ready to handle complex, real-world tasks — from automations to conversations — right out of the box.
+
+What you can do with Pranthora **Voice Agents**
+
+- **Build lifelike voice experiences** that understand and respond naturally to your users.
+- **Make and receive calls** seamlessly through telephony or web-based channels.
+- **Connect instantly to multiple providers** with Pranthora’s unified MCP integrations — no complex setup required.
+- **Automate complex workflows** like appointment scheduling, lead qualification, or customer support.
+
+A voice agent is made up of:
 
 <CardGroup cols={2}>
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
+  <Card title="Speech to text" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
     Get your docs set up locally for easy development
   </Card>
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
+  <Card title="LLM" icon="image" href="https://mintlify.com/docs/development">
     Preview your changes before you push to make sure they're perfect
   </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
+  <Card title="Text to speech" icon="sparkles">
+    
   </Card>
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
+  <Card title="Integrations" icon="sparkles">
+    
   </Card>
 </CardGroup>
+
+
+What you can do with Pranthora **Voice Workflows**
+
+- **Design conversational flows visually** — define how the conversation moves step by step.
+- **Assign roles to agents** — let each agent handle a specific part of the dialogue based on its purpose.
+- **Set transition rules** — control when the conversation moves to the next step or agent.
+- **Connect actions and integrations** — let certain steps perform real tasks like scheduling or fetching data automatically.
