Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -13,6 +13,7 @@ description: "Welcome to Pranthora!"
   className="hidden dark:block"
   src="/images/hero-dark.png"
   alt="Hero Dark"
+  title=""
 />
 
 ## What is Pranthora ?
@@ -43,7 +44,6 @@ A voice agent is made up of:
     
   </Card>
 </CardGroup>
-
 
 What you can do with Pranthora **Voice Workflows**
 
