Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -11,9 +11,9 @@ description: "Welcome to Pranthora!"
 
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/login.png"
   alt="Hero Dark"
-  title=""
+  title={true}
 />
 
 ## What is Pranthora ?
