Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,17 +3,13 @@ title: "Introduction"
 description: "Welcome to Pranthora!"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
 
 <img
   className="hidden dark:block"
   src="/login.png"
   alt="Hero Dark"
   title={true}
+  style={{ height: "50%" }}
 />
 
 ## What is Pranthora ?
