Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -6,10 +6,9 @@ description: "Welcome to Pranthora!"
 
 <img
   className="hidden dark:block"
-  src="/login.png"
+  src="/images/hero-dark.png"
   alt="Hero Dark"
   title={true}
-  style={{ height: "50%" }}
 />
 
 ## What is Pranthora ?
