Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -6,7 +6,7 @@ description: "Welcome to Pranthora!"
 
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/images/login.png"
   alt="Hero Dark"
   title={true}
 />
