adding the changes

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-description: "Welcome to Pranthora!"
+description: ""
 ---
 
 
@@ -27,16 +27,16 @@ A voice agent is made up of:
 
 <CardGroup cols={2}>
   <Card title="Speech to text" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
+    Turns what users say into text your agent can understand.
   </Card>
   <Card title="LLM" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
+    Understands the conversation and replies intelligently.
   </Card>
   <Card title="Text to speech" icon="sparkles">
-    
+    Turns your agent’s replies into natural, human-like speech.
   </Card>
   <Card title="Integrations" icon="sparkles">
-    
+    Easily link your agent with apps, tools, and services so it can get tasks done for you.
   </Card>
 </CardGroup>
 
@@ -46,3 +46,57 @@ What you can do with Pranthora **Voice Workflows**
 - **Assign roles to agents** — let each agent handle a specific part of the dialogue based on its purpose.
 - **Set transition rules** — control when the conversation moves to the next step or agent.
 - **Connect actions and integrations** — let certain steps perform real tasks like scheduling or fetching data automatically.
+
+## Pathway to access voice agents and workflows
+<CardGroup cols={2}>
+  <Card title="Phone Calls" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
+    <ul>
+      <li>1. Connect a Twilio number to your agent or workflow — it answers calls on behalf of your business.</li>
+      <li>2. Automate calls and handle conversations seamlessly.</li>
+      <li>3. Setup in minutes with just a few clicks.</li>
+    </ul>
+  </Card>
+  <Card title="Web Integration" icon="image" href="https://mintlify.com/docs/development">
+   <ul>
+      <li>1. Embed your voice agent or workflow directly into your website.</li>
+      <li>2. Engage visitors with interactive voice experiences.</li>
+      <li>3. No coding required — just copy and paste a snippet.</li>
+      <li>4. SDK support for accessing the agents is coming soon</li>
+    </ul>
+  </Card>
+  <Card title="WhatsApp Integration" icon="image" href="https://mintlify.com/docs/development">
+    <ul>
+      <li>1. Connect your voice agents and workflows to WhatsApp.</li>
+      <li>2. Engage customers on the world’s most popular messaging platform.</li>
+      <li>3. Automate conversations and provide instant support.</li>
+    </ul>
+  </Card>
+</CardGroup>
+
+## Key Capabilities of Pranthora Voice Agents
+
+Pranthora provides powerful, flexible, and easy-to-use voice agents that enable natural, controlled, and intelligent interactions across multiple channels.
+
+### **Core Features**
+
+- **Easily Configurable Components**  
+  Quickly set up Speech-to-Text (STT), Text-to-Speech (TTS), and LLM-based conversational logic without complex coding.  
+
+- **Wide Range of Provider Integrations** *(Heart of the System)*  
+  Our extensive integration support allows agents to connect with existing systems, enabling them to perform complex tasks seamlessly.  
+
+- **Multi-Channel Access**  
+  Interact with agents via **phone numbers**, **web**, or **WhatsApp**, giving your users flexible ways to communicate.  
+
+- **Natural Conversations with Turn-Taking**  
+  Agents understand context, manage turn-taking, and maintain coherent, human-like dialogue.  
+
+- **Controlled Workflows & Transfers**  
+  Design workflows to guide conversations, manage branching logic, and transfer interactions to other agents or humans when needed.  
+
+- **Embedded and Web-Ready**  
+  Generate embedded code for your website or system, spin up any agent instantly, and leverage the upcoming SDK for deeper integrations.  
+
+### **Why It Matters**
+
+By combining wide-ranging integrations, multi-channel access, and robust workflow control, Pranthora empowers businesses to deliver **consistent, intelligent, and reliable voice interactions**, whether for customer support, appointment scheduling, or any other automated conversational task.
