formatting changes done

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -18,17 +18,17 @@ What you can do with Pranthora **Voice Agents**
 A voice agent is made up of:
 
 <CardGroup cols={2}>
-  <Card title="Speech to text" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
+  <Card title="Speech to text" icon="pen-to-square" href="">
+    listens to the caller’s voice and converts it into text for the model to understand
   </Card>
-  <Card title="LLM" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
+  <Card title="LLM" icon="image" href="">
+    processes the text input and generates intelligent responses based on the assistant’s prompt
   </Card>
   <Card title="Text to speech" icon="sparkles">
-    
+    Converts the assistant’s text responses into natural-sounding speech.
   </Card>
   <Card title="Integrations" icon="sparkles">
-    
+    Connect with external systems and perform real actions — from fetching data to automating workflows.
   </Card>
 </CardGroup>
 
