adding introduction changes

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -28,7 +28,7 @@ A voice agent is made up of:
     Converts the assistant’s text responses into natural-sounding speech.
   </Card>
   <Card title="Integrations" icon="sparkles">
-    Connect with external systems and perform real actions — from fetching data to automating workflows.
+    Connect with external systems and perform real actions — from fetching data to automating workflows
   </Card>
 </CardGroup>
 
