add videos and chnage color

--- a/integrations/mcp_integrations.mdx
+++ b/integrations/mcp_integrations.mdx
@@ -34,6 +34,15 @@ You can explore available tools under each MCP integration by expanding the inte
 
 > 💡 **Tip:** Each MCP integration can host multiple tools, so you can perform several actions within the same connected provider.
 
+   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6),0_0_60px_rgba(232,138,70,0.4)] transition-all duration-500 hover:shadow-[0_0_45px_rgba(255,123,61,0.8),0_0_80px_rgba(232,138,70,0.5)] hover:scale-[1.01]">
+      <div className="rounded-xl bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/30 hover:ring-gray-600/30 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 " style={{ padding: "12px" }}>
+         <video width="100%" height="100%" autoPlay loop muted playsInline className="m-0 rounded-lg">
+            <source src="/videos/mcp_integration.mp4" type="video/mp4" />
+         Your browser does not support the video tag.
+         </video>
+      </div>
+   </div>
+
 ---
 
 ## 🧰 Adding a Custom MCP Integration
@@ -48,6 +57,8 @@ If your desired MCP provider is not available in the pre-listed options, you can
 3. Once configured, the system will automatically **connect to the MCP server**, **fetch the schema**, and add it to your **Active Integrations**.
 
 You can then use this integration like any other provider — attach it to assistants or workflows and start utilizing its tools immediately.
+
+![Custom MCP](/images/custom_mcp.png)
 
 ---
 
