--- a/voice-workflows/testing.mdx
+++ b/voice-workflows/testing.mdx
@@ -32,6 +32,8 @@ There are two primary testing options:
 
 <Image src="/images/voice-workflow-chat-test.png" alt="Voice Workflow Chat Testing Interface" />
 
+![Workflow Test](/images/workflow_test.png)
+
 ---
 
 ## 💡 Tips
