--- a/voice-workflows/quickstart.mdx
+++ b/voice-workflows/quickstart.mdx
@@ -15,14 +15,21 @@ This guide will help you create your first **voice workflow** and configure it f
 2. Click **Create Workflow** to initiate a new workflow.
 
 
-
-   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6),0_0_60px_rgba(232,138,70,0.4)] transition-all duration-500 hover:shadow-[0_0_45px_rgba(255,123,61,0.8),0_0_80px_rgba(232,138,70,0.5)] hover:scale-[1.01]">
-      <div className="rounded-xl bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/30 hover:ring-gray-600/30 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 " style={{ padding: "12px" }}>
-         <video width="100%" height="100%" autoPlay loop muted playsInline className="m-0 rounded-lg">
+   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6)]">
+      <div className="rounded-xl bg-background-light dark:bg-background-dark ring-1 ring-gray-400/30" style={{ padding: "12px" }}>
+         <video 
+            width="100%" 
+            height="100%" 
+            autoPlay 
+            loop 
+            muted 
+            playsInline 
+            className="m-0 rounded-lg"
+         >
             <source src="/videos/create_workflow.mp4" type="video/mp4" />
-         Your browser does not support the video tag.
+           
          </video>
-      </div>
+      </div>   
    </div>
 
 ---
@@ -38,14 +45,21 @@ Acknowledge the user's voice agent use case, then ask for information about the 
 
 * Click **Save** to confirm your node.
 
-
-   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6),0_0_60px_rgba(232,138,70,0.4)] transition-all duration-500 hover:shadow-[0_0_45px_rgba(255,123,61,0.8),0_0_80px_rgba(232,138,70,0.5)] hover:scale-[1.01]">
-      <div className="rounded-xl bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/30 hover:ring-gray-600/30 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 " style={{ padding: "12px" }}>
-         <video width="100%" height="100%" autoPlay loop muted playsInline className="m-0 rounded-lg">
+   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6)]">
+      <div className="rounded-xl bg-background-light dark:bg-background-dark ring-1 ring-gray-400/30" style={{ padding: "12px" }}>
+         <video 
+            width="100%" 
+            height="100%" 
+            autoPlay 
+            loop 
+            muted 
+            playsInline 
+            className="m-0 rounded-lg"
+         >
             <source src="/videos/introduction_node.mp4" type="video/mp4" />
-         Your browser does not support the video tag.
+           
          </video>
-      </div>
+      </div>   
    </div>
 
 ---
@@ -61,13 +75,21 @@ Acknowledge the user's voice agent use case, then ask for information about the 
 3. Click **Save** to store the configuration.
 
 
-   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6),0_0_60px_rgba(232,138,70,0.4)] transition-all duration-500 hover:shadow-[0_0_45px_rgba(255,123,61,0.8),0_0_80px_rgba(232,138,70,0.5)] hover:scale-[1.01]">
-      <div className="rounded-xl bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/30 hover:ring-gray-600/30 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 " style={{ padding: "12px" }}>
-         <video width="100%" height="100%" autoPlay loop muted playsInline className="m-0 rounded-lg">
+   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6)]">
+      <div className="rounded-xl bg-background-light dark:bg-background-dark ring-1 ring-gray-400/30" style={{ padding: "12px" }}>
+         <video 
+            width="100%" 
+            height="100%" 
+            autoPlay 
+            loop 
+            muted 
+            playsInline 
+            className="m-0 rounded-lg"
+         >
             <source src="/videos/conversation_node.mp4" type="video/mp4" />
-         Your browser does not support the video tag.
+           
          </video>
-      </div>
+      </div>   
    </div>
 
 ---
@@ -80,13 +102,23 @@ On the **right side** of the workflow screen, you will find **Global Configurati
 * **Transcriber** — choose the speech-to-text provider.
 * **Text to Speech** — configure the voice for agent responses.
 
-   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6),0_0_60px_rgba(232,138,70,0.4)] transition-all duration-500 hover:shadow-[0_0_45px_rgba(255,123,61,0.8),0_0_80px_rgba(232,138,70,0.5)] hover:scale-[1.01]">
-      <div className="rounded-xl bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/30 hover:ring-gray-600/30 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 " style={{ padding: "12px" }}>
-         <video width="100%" height="100%" autoPlay loop muted playsInline className="m-0 rounded-lg">
+ 
+
+   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6)]">
+      <div className="rounded-xl bg-background-light dark:bg-background-dark ring-1 ring-gray-400/30" style={{ padding: "12px" }}>
+         <video 
+            width="100%" 
+            height="100%" 
+            autoPlay 
+            loop 
+            muted 
+            playsInline 
+            className="m-0 rounded-lg"
+         >
             <source src="/videos/global_configuration.mp4" type="video/mp4" />
-         Your browser does not support the video tag.
+           
          </video>
-      </div>
+      </div>   
    </div>
 
 > ⚠️ **Note:** These three configurations apply **globally across all nodes** in the workflow. They remain consistent for the entire conversation flow.
