--- a/assistants/integrations.mdx
+++ b/assistants/integrations.mdx
@@ -21,13 +21,21 @@ From the Integrations Library, select your desired provider and click Connect to
 4. Select the integration for your assistant to start using it.
 
 
-    <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6),0_0_60px_rgba(232,138,70,0.4)] transition-all duration-500 hover:shadow-[0_0_45px_rgba(255,123,61,0.8),0_0_80px_rgba(232,138,70,0.5)] hover:scale-[1.01]">
-      <div className="rounded-xl bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/30 hover:ring-gray-600/30 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 " style={{ padding: "12px" }}>
-         <video width="100%" height="100%" autoPlay loop muted playsInline className="m-0 rounded-lg">
+   <div className="relative mt-[40px] rounded-xl p-[8px] bg-gradient-to-br from-[#ffa366] via-[#e88a46] to-[#ff5722] shadow-[0_0_35px_rgba(255,123,61,0.6)]">
+      <div className="rounded-xl bg-background-light dark:bg-background-dark ring-1 ring-gray-400/30" style={{ padding: "12px" }}>
+         <video 
+            width="100%" 
+            height="100%" 
+            autoPlay 
+            loop 
+            muted 
+            playsInline 
+            className="m-0 rounded-lg"
+         >
             <source src="/videos/integrations.mp4" type="video/mp4" />
-         Your browser does not support the video tag.
+           
          </video>
-      </div>
+      </div>   
    </div>
 
 ---
